--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -297,8 +297,32 @@ In such a situation if we are dissatisfied with the solution, we are sure that i
 
 Back to Coq, the theorem \m{rev\_spec\_unique} is the fulfillment of our plan of ``proving the specification correct''. Such a theorem in Coq has the same status as an ordinary definition -- the statement of the theorem is a type and to prove it we need to construct an element of that type. However, the means of construction are different from those typically used for definitions: we don't provide the proof term explicitly, like the body of \m{app} between \m{match} and \m{end} was provided explicitly, but instead we use Coq's tactic language called Ltac.
 
-In Ltac, we can manipulate tactics, which can be seen as things that encapsulate a particular line of mathematical reasoning and argumentation (or, from the programmer's perspective, as techniques for synthesizing particular kinds of programs). The most basic tactics directly correspond to introduction and elimination rules of type theory from the previous section and to basic features of Coq's term language, like pattern matching. More complex tactics can be created from simpler ones by using features provided by Ltac, like various kinds of tactic combinators, searching hypotheses and variables in the proof context, various flavours of backtracking and the ability to inspect Coq's terms as syntax. The last of these is something that is not possible using the term language, as it would lead to contradiction.
+In Ltac, we can manipulate tactics, which can be seen as things that encapsulate a particular line of mathematical reasoning and argumentation (or, from the programmer's perspective, as techniques for synthesizing particular kinds of programs). The most basic tactics directly correspond to introduction and elimination rules of type theory as described in the previous section, and to basic features of Coq's term language, like pattern matching. More complex tactics can be created from simpler ones by using features provided by Ltac, like many kinds of tactic combinators, searching hypotheses and variables in the proof context (and more advanced features for context management), various flavours of backtracking and the ability to inspect Coq's terms as syntax.
 
+The last of these is something that is not possible using the term language, as it would allow us to distinguish between convertible terms and thus would lead to contradiction. For example, given a \m{P} : \m{Prop}, we can't use the term language to check whether it's of the form \m{Q /\char`\\\ R}, but we can do that using Ltac. We can use this in conjunction with other Ltac features to, for example, implement a tactic that can decide whether a proposition is an intuitionistic tautology or not.
+
+Back to the proof of our theorem, the idea is as follows. The proof is by induction on \m{l}. This splits the proof into two cases: in the first one \m{l} is \m{[]} and in the second one \m{l} is $\m{h} :: \m{t}$ for some head \m{h} and tail \m{t}. In the first case, we exploit the fact that \m{f [] = f [] ++ f []} (which stems from specializing one of the specification's clauses with \m{[]}) to argue that the length of \m{f []} must be zero, and thus that \m{f []} must equal \m{[]} (and analogously for \m{g}). In the second case, we make heavy use of equations coming from the specification and the induction hypotheses.
+
+We won't explain how this proof idea is actually carried out, because any such an explanation would be far less enlightening than just going over the proof script in CoqIDE. We will only gloss over the meaning of tactics that were used:
+
+\begin{itemize}
+    \item \m{intros} lets us assume hypotheses and move universally quantified variables from the goal into the context.
+    \item \m{induction} starts a proof by induction, splitting the goal into as many subgoals as there are cases.
+    \item \m{cbn} performs computations, like simplifying \m{2 + 2} to \m{4}.
+    \item \m{specialize} instantiates universally quantified hypotheses with particular objects.
+    \item \m{apply} implements modus ponens, allowing us to transform \m{P} into \m{Q} in the context, given a proof of \m{P -> Q}.
+    \item \m{rewrite}, given a hypothesis that is an equation, replaces the occurrences of its left-hand side its right-hand side in the goal or another hypothesis.
+    \item \m{destruct} implements reasoning by cases.
+    \item \m{reflexivity} allows us to conclude that \m{x = x}.
+    \item \m{lia} is the powerful tactic for dealing with arithmetic mentioned earlier. In our case we use it to prove that from \m{n + n = n} it follows that \m{n = 0}.
+    \item \m{change} allows us to replace a term or its part with a convertible term. For example, having computed \m{2 + 2} to \m{4}, we could use \m{change} to ``reverse'' this computation, changing \m{4} back into \m{2 + 2}.
+\end{itemize}
+
+Our short tutorial on Coq has come to an end. From now on, we assume the reader is familiar with the technical workings of Coq -- while discussing further code listings, we will only explain the concepts and techniques. If this is not the case, we refer the reader to the standard books on the topic:
+
+\begin{itemize}
+    \item Software Foundations \cite{SoftwareFoundations} is a very beginner-friendly textbook, aimed at teaching Coq fundamentals to 
+\end{itemize}
 
 
 
