Thesis, section 1.7: just a single paragraph, but did a lot of reading.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -344,6 +344,10 @@ In this section we briefly discuss the not so large body of literature relevant 
     \item Certified Programming with Dependent Types \cite{CPDT} is a book aimed at more advanced Coq users. It focuses on programming with dependent types and automating proofs with powerful hand-crafted tactics, but also covers topics like general recursion and dealing with axioms.
 \end{itemize}
 
+As we can see, the book-length literature on Coq is quite scarce and sometimes dated. The situation in the field of functional algorithms and data structures is even worse. In fact, there is only one significant book in the whole field, namely Purely Functional Data Structures \cite{Okasaki}, which is an extended version of Chris Okasaki's PhD thesis \cite{OkasakiPhD}. This book is basically a turning point which demarcates two periods in the field's history: pre-Okasaki and post-Okasaki. We won't describe these periods and their literature in detail, as a very good summary is available in this StackOverflow thread \cite{SinceOkasaki}.
+
+
+
 \chapter{A quick \textit{tour de} sort} \label{ch2}
 
 \chapter{A man, a plan, a canal -- MSc thesis}
@@ -520,6 +524,18 @@ Mention thesis' repository: \url{wkolowski.github.io/RandomCoqCode/Thesis/}
     \textit{Certified Programming with Dependent Types}, \\
     \url{http://adam.chlipala.net/cpdt/}
 
+\bibitem{Okasaki}
+    Chris Okasaki,
+    \textit{Purely Functional Data Structures}, 1998
+
+\bibitem{OkasakiPhD}
+    Chris Okasaki,
+    \textit{Purely Functional Data Structures} (PhD thesis), 1996 \\
+    \url{https://www.cs.cmu.edu/~rwh/theses/okasaki.pdf}
+
+\bibitem{SinceOkasaki}
+    \textit{What's new in purely functional data structures since Okasaki?}, \\
+    \url{https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}
 \end{thebibliography}
 
 \end{document}
